--- a/style.css
+++ b/style.css
@@ -4,85 +4,93 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
 
-
-
-*, *::before, *::after {
+*{
+	margin: 0px;
+	padding: 0px;
 	box-sizing: border-box;
 }
 
-body {
-	padding: 0;
-	margin: 0;
+nav{
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	min-height: 8vh;
 	background-color: #3A7472;
+	font-family: 'Roboto', Sans-serrif;
+}
+body{
 	background-image: url("pexels-min-an-749080.png");
-	font-family: 'Roboto', sans-serif;
-	font-size: 1.2rem;
+	background-repeat: no-repeat;
+	background-size: auto;
+}
+
+.logo{
 	color: white;
-	min-height: 100vh;
+	text-transform: uppercase;
+	letter-spacing: 3px;
+	font-size: 15px;
 }
-
-.full-height-grow {
+.nav-links{
 	display: flex;
-	flex-direction: column;
-}
-
-.brand-logo {
-	display: flex;
-	align-items: center;
-	font-size: 1.25em;
-	color: inherit;
-	text-decoration: none;
-}
-
-.brand-logo-name {
-	color: white;
-	text-decoration: none;
-	display: flex;
-	flex-grow: 1;
-}
-
-.main-nav ul{
-	display: flex;
-	margin: 0;
-	padding: 0;
+	justify-content: space-around;
+	width: 35%;
 	list-style: none;
-	text-align: center;
 }
-
-.main-nav a {
+.nav-links a{
 	color: white;
 	text-decoration: none;
-	padding: 1rem;
-	text-align: center;
+	letter-spacing: 2px;
+	font-weight: lighter;
+	font-size: 13px;
+}
+.burger{
+	display: none;
+	cursor: pointer;
+}
+.burger div{
+	width: 25px;
+	height: 3px;
+	background-color: white;
+	margin: 5px;
+	border-radius: 2rem;
 }
 
-.main-nav a:hover {
-	color: #ADADAD
+@media screen and (max-width: 1024px){
+	.nav-links{
+		width: 60%;
+		list-style: none;
+	}
 }
 
-.main-header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	height: 60px;
-	
+@media screen and (max-width: 768px){
+	.nav-links{
+		width: 60%;
+	}
+	.home-main-section div{
+		font-size: 8px;
+		line-height: 34px;
+	}
+	.btn{
+		padding: 8px 25px;
+		font-size: 5px;
+	}
 }
 
-.container{
-	max-width: 1140px;
-	margin: 0 auto;
-	padding: 30px;
+.nav-active{
+	transform: translateX(0%);
 }
 
 .title {
 	font-family: 'Dancing Script', cursive;
 	font-weight: 200;
 	align-content: center;
+	color: white;
 }
 
 .bigger-title {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 3em;
+	color: white;
 }
 
 .btn {
@@ -90,7 +98,16 @@ body {
 	background-color:rgba(255,255,255,0.30);
 	padding: .6rem .8rem;
 	border-radius: 2rem;
-	text-decoration: none;
+	text-decoration: underline;
 	font-family: 'Roboto', Sans-serif;
 	font-size: .8rem
+}
+.main-text{
+	left: 0;
+    position: absolute;
+    text-align: center;
+    top: 35%;
+    width: 100%;
+    line-height: 50px;
+    transform: scale(1.2,1.2);
 }
