--- a/style.css
+++ b/style.css
@@ -63,6 +63,9 @@ body{
 }
 
 @media screen and (max-width: 768px){
+	body{
+		overflow-x: hidden;
+		overflow-y: hidden;
 	.nav-links{
 		width: 60%;
 	}
