--- a/style.css
+++ b/style.css
@@ -65,8 +65,7 @@ body{
 
 @media screen and (max-width: 768px){
 	body{
-		overflow-x: hidden;
-		overflow-y: hidden;
+		overflow: hidden;
 	}
 	.nav-links{
 		width: 60%;
@@ -85,16 +84,6 @@ body{
 	transform: translateX(0%);
 }
 
-@keyframes navLinkFade{
-	from{
-		opacity: 0;
-		transform: translateX(50px);
-	}
-	to{
-		opacity: 1;
-		transform: translateX(0px);
-	}
-}
 .title {
 	font-family: 'Dancing Script', cursive;
 	font-weight: 200;
