--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ nav{
 body{
 	background-image: url("pexels-min-an-749080.png");
 	background-repeat: no-repeat;
+	background-position: center center;
+	background-attachment: fixed;
 	background-size: cover;
 }
 
